# mtrs

./: CMakeLists.txt  build.sh  clean.sh  main.cpp  mpthread.cpp  mpthread.h  msgqueue.cpp  msgqueue.h  mtrs.cpp  mtrs.h  mtrs.sln  mtrs.vcproj  mtrs_audio.cpp  mtrs_comm.h  mtrs_internal.cpp  mtrs_internal.h  mtrs_video.cpp
win32/: inttypes.h  stdint.h
